Hinzufügen eines interaktiven Tutorials im Dashboard: Neue Overlay-Elemente und Funktionen zur Anleitung der Benutzer durch die wichtigsten Funktionen. Verbesserungen an der Benutzeroberfläche und Anpassungen in der Logik zur Anzeige des Tutorials. Zudem wurden Debug-Ausgaben entfernt und die Codequalität optimiert.

--- a/Files/Style/style.css
+++ b/Files/Style/style.css
@@ -43,6 +43,7 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: opacity 1s;
     text-align: center;
+    position: relative;
 }
 
 #login-container h2 {
@@ -353,8 +354,6 @@ body {
         color: white;
     }
 }
-
-
 
 .settings {
     width: 100px;
